# myresume

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py  test.py
chains/: guideline_chain.py  parsing_chain.py  review_chain.py  strategy_chain.py  validation_chain.py  writing_chain.py
config/: llm_factory.py  prompts.py  settings.py
docs/: CODING_RULES.md  PROJECT_PLAN.md
models/: input_models.py  output_models.py  state.py
tests/: check_settings.py  test_connectivity.py
tools/: llm_util.py  web_scraper.py
ui/components/: input_forms.py  sidebar.py
ui/pages/: step1_input.py  step2_validation.py  step3_research.py  step4_strategy.py  step5_guidelines.py  step6_essay.py  step7_review.py  step8_final.py
workflow/: edges.py  graph.py
workflow/nodes/: validation_node.py
